--- a/Thesis.tex
+++ b/Thesis.tex
@@ -12,6 +12,7 @@
 \usepackage{xcolor}
 \usepackage{float}
 \usepackage{enumerate}
+\usepackage{algorithm}
 \usepackage{algorithmic}
 \usepackage{csquotes} % Recommended by biblatex
 \setcounter{secnumdepth}{3}
@@ -61,7 +62,5 @@
 %\printbibliography
 \appendix
 \subfile{Appendix/appendix}
-\appendix
-\subfile{Appendix/appendixB}
 
 \end{document}
